--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ body {
   text-align: left;
   padding-left: 50px;
   padding-right: 100px;
+  max-width: 850px;
 }
 
 .form__paragraph {
@@ -152,11 +153,12 @@ body {
 }
 
 .form__sign-in {
-  background-color: antiquewhite;
+  background-color: #d6cc99;
   color: #222;
   display: flex;
   flex-wrap: wrap;
   padding: 25px 50px;
+  height: 30%;
 }
 
 .legend {
@@ -171,6 +173,14 @@ body {
   padding-right: calc(50% - 200px);
 }
 
+input:focus {
+  outline: 2px solid blue;
+}
+
+.error {
+  outline: 2px solid red;
+}
+
 label {
   text-transform: uppercase;
   color: #222222e7;
@@ -183,7 +193,7 @@ label {
   margin-top: -50px;
   height: 2rem;
   border-radius: 10px;
-  background-color: rgb(9, 87, 9);
+  background-color: #005b41;
   color: #e3e3e3;
   font-weight: bold;
 }
